# youtube-transcriber

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/youtube_transcriber/: __main__.py  cli.py  downloader.py  funasr_engine.py  logger.py  transcriber.py  utils.py  whisper_engine.py
tests/: test_downloader.py  test_funasr_engine.py  test_transcriber.py  test_whisper_engine.py
