[project]
name = "youtube-transcriber"
version = "0.1.0"
description = "A tool to transcribe YouTube videos using Whisper or FunASR."
authors = [
    { name = "TC94615", email = "TCLee0117@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp ==2025.4.30",
    "openai-whisper ==20240930",
    "funasr ==1.2.6",
    "modelscope ==1.25.0",
    "onnxruntime ==1.21.0",
    "funasr-onnx ==0.4.1",
    "torch ==2.7.0",
    "addict ==2.4.0",
    "setuptools ==80.4.0",
    "datasets ==2.16.0",
    "pillow ==11.2.1",
    "simplejson ==3.20.1",
    "sortedcontainers ==2.4.0",
    "torchaudio ==2.7.0"
]

[tool.poetry.group.dev.dependencies]
black = "==24.10.0"
flake8 = "==7.2.0"
isort = "==5.13.2"
mypy = "==1.15.0"
pytest = "==8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
youtube-transcriber = "youtube_transcriber.__main__:main"

[tool.poetry]
packages = [
    { include = "youtube_transcriber", from = "src" }
]